@@ -1921,3 +1921,9 @@ ${for %%a in (*.exe) do echo %%a}
 	- Fixed Makefile suite that erroneously linked with -lpthread when
 	linking with -lm was necessary. Also fixed makefiles trying to
 	build libcu8 even on linux
+
+{{Friday 1st, June}}
+
+    - Added a brand new editing system to the libcu8 library so that Dos9's
+    utf-8 versions supports decent editing facilities like hability to insert
+    characters in the middle of the input or use history.
